# aws-sdk-cpp-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  abs.yaml  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_openssl1.1.1.yaml  linux_64_openssl3.yaml  linux_aarch64_.yaml  linux_aarch64_openssl1.1.1.yaml  linux_aarch64_openssl3.yaml  linux_c_compilergcccxx_compilergxx.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  linux_ppc64le_.yaml  linux_ppc64le_openssl1.1.1.yaml  linux_ppc64le_openssl3.yaml  linux_python2.7.yaml  linux_python3.6.yaml  osx_.yaml  osx_64_.yaml  osx_64_openssl1.1.1.yaml  osx_64_openssl3.yaml  osx_arm64_.yaml  osx_arm64_openssl1.1.1.yaml  osx_arm64_openssl3.yaml  osx_c_compilerclangcxx_compilerclangxx.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  osx_python2.7.yaml  osx_python3.6.yaml  win_.yaml  win_64_.yaml  win_64_openssl1.1.1.yaml  win_64_openssl3.yaml  win_c_compilervs2008cxx_compilervs2008.yaml  win_c_compilervs2015cxx_compilervs2015.yaml  win_c_compilervs2015cxx_compilervs2015python3.6.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
recipe/: 0001-Remove-Werror-from-compiler-flags.patch  0001-fix-libdir-for-deps.patch  0002-force-openssl-use.patch  0003-Fix-AWSSDKConfig.cmake.patch  0004-demote-compilation-errors.patch  CMakeLists.txt  bld.bat  build.bat  build.sh  conda_build_config.yaml  meta.yaml  recipe.yaml  run_test.bat  run_test.sh
recipe/patches/: 0001-do-not-set-WX-equivalent-to-Werror-on-windows.patch
(+3 files in other folders)
